--- a/src/investment-app-frontend/package.json
+++ b/src/investment-app-frontend/package.json
@@ -1,29 +1,41 @@
 {
-  "name": "investment-app-frontend",
+  "name": "investmen-app-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "setup": "npm i && dfx canister create investment-app-backend && dfx generate investment-app-backend && dfx deploy",
+    "setup": "npm i && dfx canister create password-manager-dapp-backend && dfx generate password-manager-dapp-backend && dfx deploy",
     "start": "vite --port 3000",
     "prebuild": "dfx generate",
     "build": "tsc && vite build",
     "format": "prettier --write \"src/**/*.{json,js,jsx,ts,tsx,css,scss}\""
   },
+  "dependencies": {
+    "@dfinity/agent": "^2.3.0",
+    "@dfinity/auth-client": "^2.3.0",
+    "@dfinity/candid": "^2.3.0",
+    "@dfinity/identity": "^2.3.0",
+    "@dfinity/ledger-icp": "^2.6.11",
+    "@dfinity/principal": "^2.3.0",
+    "@nfid/identitykit": "^1.0.10",
+    "@reduxjs/toolkit": "^2.6.1",
+    "clsx": "^2.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-error-boundary": "^5.0.0",
+    "react-hook-form": "^7.54.2",
+    "react-redux": "^9.2.0",
+    "react-toastify": "^11.0.5",
+    "uuid": "^11.1.0"
+  },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "cross-fetch": "^3.1.6",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "@vitejs/plugin-react": "^4.0.1",
     "dotenv": "^16.3.1",
     "sass": "^1.63.6",
-    "typescript": "^5.1.3",
+    "typescript": "^5.8.2",
     "vite": "^4.3.9",
-    "vite-plugin-environment": "^1.1.3",
-    "vitest": "^2.0.5"
-  },
-  "dependencies": {
-    "@dfinity/agent": "^2.1.3",
-    "@dfinity/candid": "^2.1.3",
-    "@dfinity/principal": "^2.1.3",
-    "lit-html": "^2.8.0"
+    "vite-plugin-environment": "^1.1.3"
   }
 }
