--- a/src/investment-app-frontend/package.json
+++ b/src/investment-app-frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "investmen-app-frontend",
+  "name": "investment-app-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -20,8 +20,8 @@
     "@nfid/identitykit": "1.0.10",
     "@reduxjs/toolkit": "^2.6.1",
     "clsx": "^2.1.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-error-boundary": "^5.0.0",
     "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
@@ -29,17 +29,13 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@types/react": "^19.0.14",
-    "@types/react-dom": "^19.0.11",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^4.0.1",
     "dotenv": "^16.3.1",
     "sass": "^1.75.0",
     "typescript": "^5.4.5",
     "vite": "^5.2.10",
     "vite-plugin-environment": "^1.1.3"
-  },
-  "overrides": {
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
   }
 }
